--- a/package.json
+++ b/package.json
@@ -8,13 +8,19 @@
     "dev": "nodemon server.js"
   },
   "dependencies": {
+    "axios": "^1.6.0",
     "express": "^4.18.2",
-    "axios": "^1.6.0"
+    "sqlite3": "^5.1.7"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
   },
-  "keywords": ["ollama", "ai", "chatbot", "interface"],
-  "author": "Votre nom",
+  "keywords": [
+    "ollama",
+    "ai",
+    "chatbot",
+    "interface"
+  ],
+  "author": "Mathieu Dubart",
   "license": "MIT"
 }
