--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   "dependencies": {
     "axios": "^1.6.0",
     "express": "^4.18.2",
-    "sqlite3": "^5.1.7"
+    "sqlite3": "^5.1.7",
+    "marked": "^9.1.2",
+    "dompurify": "^3.0.5"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
