--- a/package.json
+++ b/package.json
@@ -5,14 +5,17 @@
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
-    "dev": "nodemon server.js"
+    "dev": "nodemon server.js",
+    "postinstall": "node scripts/copy-assets.js"
   },
   "dependencies": {
     "axios": "^1.6.0",
     "express": "^4.18.2",
     "sqlite3": "^5.1.7",
     "marked": "^9.1.2",
-    "dompurify": "^3.0.5"
+    "dompurify": "^3.0.5",
+    "multer": "^1.4.5-lts.1",
+    "prismjs": "^1.29.0"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
