--- a/package.json
+++ b/package.json
@@ -1,31 +1,19 @@
 {
-  "name": "ollama-web-interface",
+  "name": "ollama-server",
   "version": "1.0.0",
-  "description": "Interface web pour Ollama",
+  "description": "",
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
-    "dev": "nodemon server.js",
-    "postinstall": "node scripts/copy-assets.js"
+    "dev": "nodemon server.js"
   },
   "dependencies": {
-    "axios": "^1.6.0",
     "express": "^4.18.2",
-    "sqlite3": "^5.1.7",
-    "marked": "^9.1.2",
-    "dompurify": "^3.0.5",
     "multer": "^1.4.5-lts.1",
-    "prismjs": "^1.29.0"
+    "axios": "^1.6.0",
+    "sqlite3": "^5.1.6"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
-  },
-  "keywords": [
-    "ollama",
-    "ai",
-    "chatbot",
-    "interface"
-  ],
-  "author": "Mathieu Dubart",
-  "license": "MIT"
+  }
 }
